--- a/classNotes/15-monte-carlo-methods/slides-15-monte-carlo-methods.Rmd
+++ b/classNotes/15-monte-carlo-methods/slides-15-monte-carlo-methods.Rmd
@@ -183,7 +183,7 @@ Actual probability of getting sequence 1, 3, 5:
 name: practice1
 class: inverse
 
-# Practice
+# Practice: Coins & Dice
 
 Use the `sample()` function and a monte carlo simulation to estimate the answers to these questions:
 
@@ -226,10 +226,59 @@ tibble(
   filter(sum == 8) %>%
   summarise(probability = n() / N)
 ```
-.leftcol[
-**Bonus**:
 
-What are the odds that five cards drawn from a 52-card deck will sum to a prime number? Set aces to 1 and all "face" cards (Jack, Queen, King) equal to 10. Hint: use `isPrime()` as a helper.
+---
+.font150[When `replace = FALSE`]
+
+Sometimes events cannot be independently simulated  
+<br>
+
+--
+What are the odds that 3 cards drawn from a 52-card deck will sum to an even number? Set aces to 1 and all "face" cards (Jack, Queen, King) equal to 10.
+<br>
+
+--
+```{r}
+deck <- rep(c(seq(10), 10, 10, 10), 4)
+```
+
+--
+```{r}
+N <- 100000
+count <- 0
+for (i in 1:N) {
+   cards = sample(x = deck, size = 3, replace = FALSE) #<<
+   if (sum(cards) %% 2 == 0) {
+      count <- count + 1
+   }
+}
+count / N
+```
+
+---
+name: practice2
+class: inverse
+
+# Practice: Cards
+
+Use the `sample()` function and a monte carlo simulation to estimate the answers to these questions:
+
+- What are the odds that four cards drawn from a 52-card deck will have the same suit? 
+```{r, echo=FALSE, eval=FALSE}
+deck <- c(rep('diamonds', 13), rep('hearts', 13),
+          rep('spades', 13), rep('clubs', 13))
+N <- 100000
+count <- 0
+for (i in 1:N) {
+   cards = sample(x = deck, size = 4, replace = FALSE)
+   if (length(unique(cards)) == 1) {
+      count <- count + 1
+   }
+}
+count / N
+```
+.leftcol[
+- What are the odds that five cards drawn from a 52-card deck will sum to a prime number? Set aces to 1 and all "face" cards (Jack, Queen, King) equal to 10. Hint: use `isPrime()` as a helper.
 ]
 .rightcol[
 ```{r}
@@ -474,7 +523,6 @@ sum(points$belowCurve)
 ]
 
 ---
-
 .font150[Monte Carlo Integration]
 
 .leftcol[
@@ -617,6 +665,7 @@ $\pi = 4 \left( \frac{A_{circle}}{A_{square}} \right)$
 ]
 
 ---
+name: practice3
 class: inverse
 
 # Practice: Estimate $\pi$
@@ -680,6 +729,7 @@ include_graphics(file.path('img', 'monte_hall.jpg'))
 ```
 
 ---
+name: practice4
 class: inverse
 
 # Practice: Monte Hall Problem
@@ -728,5 +778,3 @@ sum(wins$swap) / nrow(wins)
 
 --
 ### 3) Final is Thursday, 12/12, from 10:20am - 12:20pm in Phillips 108
-
-
